--- a/GambleMe/stylesheets/main.css
+++ b/GambleMe/stylesheets/main.css
@@ -3,16 +3,20 @@ body {
     background-image: url("http://www.insidehockey.com/wp-content/uploads/2014/09/ice-background.jpg");
 }
 
+img{
+    width:132px;
+    height:112px;
+}
 
 // modifies the field boxes
 fieldset{
-    
+
     background-color: lightgrey;
     width: 300px;
     padding: 25px;
     border: 25px solid navy;
     margin:auto;
-    
+
 }
 strong {
     font-weight: bold;
@@ -54,24 +58,15 @@ ul {
     position: fixed;
     height: 100%;
     overflow: auto;
+    text-align: center;
 }
 
-li a {
-    display: block;
-    color: #000;
-    padding: 8px 0 8px 16px;
-    text-decoration: none;
+li{
+    border-style: solid;
 }
 
-li a.active {
-    background-color: #4CAF50;
-    color: white;
-}
 
-li a:hover:not(.active) {
-    background-color: #555;
-    color: white;
-}
+
 
 #section-top .block {
     margin-bottom: 40px;
