--- a/GambleMe/stylesheets/main.css
+++ b/GambleMe/stylesheets/main.css
@@ -40,13 +40,17 @@ li{
 
 
 // LOGIN/SIGNUP CSS
-fieldset{
+div .fieldset{
 
-    background-color: lightgrey;
-    width: 300px;
-    padding: 25px;
-    border: 25px solid navy;
-    margin:auto;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 25%;
+    background-color: #f1f1f1;
+    position: fixed;
+    height: 100%;
+    overflow: auto;
+    text-align: center;
 
 }
 strong {
