--- a/GambleMe/stylesheets/main.css
+++ b/GambleMe/stylesheets/main.css
@@ -14,7 +14,7 @@ body, html
 {
     position:absolute; left: 0; right: 0; bottom: 0; top: 0px; 
 }
-// CURRENT BETS CSS
+// CURRENT BETS + PLACE BET CSS
 img{
     width:172px;
     height:152px;
